--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,7 +16,12 @@ body{
     flex-direction: column;
     align-items: center;
 }
-.content h1, p{
+.content h1{
+    color:#435334;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.content p{
     color:#435334;
     
 }
@@ -107,3 +112,56 @@ button{
 button:hover{
     color: #AEC3AE;
 }
+.table-content{
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 30px;
+    background-color: #AEC3AE;
+    border-radius: 25px;
+    margin-top: 90px;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.table-content h1{
+    font-weight: 700;
+    color: #435334;
+    text-transform: uppercase;
+}
+.table-content hr{
+    border-top: 5px solid #435334 ;
+}
+.table{
+    border-collapse: collapse;
+    box-shadow: 0 5px 10px grey;
+    /* background-color: white; */
+    text-align: left;
+    overflow: hidden;
+    margin-top: 20px;
+    width: 100%;
+    max-width: 1000px;
+    padding: 20px;
+    border-radius: 10px;
+}
+thead{
+    box-shadow: 0 5px 10px grey;
+    /* border-radius: 10px; */    
+}
+th{
+    padding: 1rem 1rem;
+    font-size: 20px;
+    font-weight: 700;
+    color: #435334;
+    text-transform: uppercase;
+    text-align: center
+}
+td {
+    padding: 1rem 2rem;
+    color: #435334;
+    text-align: center;  
+    margin-top: 10px;
+    
+}
+
