--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -122,9 +122,9 @@ button:hover{
     margin-top: 90px;    
     display: flex;
     flex-direction: column;
-    align-items: center;
-
+    align-items: baseline;
 }
+
 .table-content h1{
     font-weight: 700;
     color: #435334;
