--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,6 +4,7 @@ body{
     justify-content: center;
     font-family: 'Poppins', sans-serif;
 }
+
 .content{
     width: 50%;
     height: 100%;
@@ -62,13 +63,25 @@ img{
     width: 250px;
     margin: 60px auto;
 }
+.edit-user{
+    width: 250px;
+    margin: 60px auto;
+}
+.edit-kelas{
+    width: 250px;
+    margin: 60px auto;
+}
 .list-kelas{
     width: 70%;
     margin-left: 140px;
 }
-.head h1{
+.head-kelas h1{
     align-items: center;
-    margin-left: 160px;
+    margin-left: 180px;
+}
+.head-user h1{
+    align-items: center;
+    margin-left: 350px;
 }
 form label{
     display: block;
